--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
 	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-	<title>WebCat</title>
+	<title>计算器</title>
   </head>
   <body>	
   </body>
@@ -16,5 +16,7 @@
 <button onclick="ab = Number(a.value) - Number(b.value);document.getElementById('sc').innerHTML = ab;">减</button>
 <button onclick="ac = Number(a.value) * Number(b.value);document.getElementById('sc').innerHTML = ac;">乘</button>
 <button onclick="ad = Number(a.value) / Number(b.value);document.getElementById('sc').innerHTML = ad;">除</button>
+<button id="ae" onclick="aaaaa = sc.innerHTML;document.getElementById('a').value = aaaaa;">结果成数A</button>
+<button id="ag" onclick="aaaab = sc.innerHTML;document.getElementById('b').value = aaaab;">结果成数B</button>
 <h1>输出</h1>
 <h3 id="sc">0</h3>
