--- a/index.html
+++ b/index.html
@@ -20,3 +20,59 @@
 <button id="ag" onclick="aaaab = sc.innerHTML;document.getElementById('b').value = aaaab;">结果成数B</button>
 <h1>输出</h1>
 <h3 id="sc">0</h3>
+<input type="button" onclick="document.getElementById('a').value =a.value + '1';" value="1" id="aq"/>
+<input type="button" onclick="document.getElementById('a').value = a.value + '2';" value="2" id="aw"/>
+<input type="button" onclick="document.getElementById('a').value = a.value + '3';" value="3" id="ae"/>
+<br>
+<input type="button" onclick="document.getElementById('a').value = a.value + '4';" value="4" id="ar"/>
+<input type="button" onclick="document.getElementById('a').value = a.value + '5';" value="5" id="at"/>
+<input type="button" onclick="document.getElementById('a').value =a.value + '6';" value="6" id="ay"/>
+<br>
+<input type="button" onclick="document.getElementById('a').value = a.value + '7';" value="7" id="au"/>
+<input type="button" onclick="document.getElementById('a').value =a.value + '8';" value="8" id="ai"/>
+<input type="button" onclick="document.getElementById('a').value =a.value + '9';" value="9" id="ao"/>
+<br>
+<input type="button" onclick="document.getElementById('a').value ='';" value="C" id="ao" style="margin-left:115px"/>
+<input type="button" onclick="document.getElementById('a').value = a.value + '0';" value="0" id="ap"/>
+<input type="button" onclick="document.getElementById('a').value ='';" value="C" id="ao"/>
+<style>
+input[id="aq"]{margin-left:115px;margin-top:10px}
+input[id="aw"]{margin-left:45px}
+input[id="ae"]{margin-left:45px}
+input[id="ar"]{margin-left:115px;margin-top:10px}
+input[id="at"]{margin-left:45px}
+input[id="ay"]{margin-left:45px}
+input[id="au"]{margin-left:115px;margin-top:10px}
+input[id="ai"]{margin-left:45px}
+input[id="ao"]{margin-left:45px}
+input[id="ap"]{margin-left:45px;margin-top:10px}
+</style>
+<br>
+<br>
+<input type="button" onclick="document.getElementById('b').value =b.value + '1';" value="1" id="awa"/>
+<input type="button" onclick="document.getElementById('b').value = b.value + '2';" value="2" id="qaq"/>
+<input type="button" onclick="document.getElementById('b').value = b.value + '3';" value="3" id="lalala"/>
+<br>
+<input type="button" onclick="document.getElementById('b').value = b.value + '4';" value="4" id="xixi"/>
+<input type="button" onclick="document.getElementById('b').value = b.value + '5';" value="5" id="nihaoya"/>
+<input type="button" onclick="document.getElementById('b').value =b.value + '6';" value="6" id="ananla"/>
+<br>
+<input type="button" onclick="document.getElementById('b').value = b.value + '7';" value="7" id="wuwuwu"/>
+<input type="button" onclick="document.getElementById('b').value =b.value + '8';" value="8" id="haha"/>
+<input type="button" onclick="document.getElementById('b').value =b.value + '9';" value="9" id="wa"/>
+<br>
+<input type="button" onclick="document.getElementById('b').value ='';" value="C" id="aaa" style="margin-left:115px"/>
+<input type="button" onclick="document.getElementById('b').value = b.value + '0';" value="0" id="xixixi"/>
+<input type="button" onclick="document.getElementById('b').value ='';" value="C" id="aaa" style="margin-left:45px"/>
+<style>
+input[id="awa"]{margin-left:115px;margin-top:10px}
+input[id="qaq"]{margin-left:45px}
+input[id="lalala"]{margin-left:45px}
+input[id="xixi"]{margin-left:115px;margin-top:10px}
+input[id="nihaoya"]{margin-left:45px}
+input[id="ananla"]{margin-left:45px}
+input[id="wuwuwu"]{margin-left:115px;margin-top:10px}
+input[id="haha"]{margin-left:45px}
+input[id="wa"]{margin-left:45px}
+input[id="xixixi"]{margin-left:45px;margin-top:10px}
+</style>
