--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <button id="ae" onclick="aaaaa = sc.innerHTML;document.getElementById('a').value = aaaaa;">结果成数A</button>
 <button id="ag" onclick="aaaab = sc.innerHTML;document.getElementById('b').value = aaaab;">结果成数B</button>
 <h1>输出</h1>
-<h3 id="sc">0</h3>
+<h3 id="sc" onclick="qqq = prompt('请输入修改结果');sc.innerText = qqq">0</h3>
 <input type="button" onclick="document.getElementById('a').value =a.value + '1';" value="1" id="aq"/>
 <input type="button" onclick="document.getElementById('a').value = a.value + '2';" value="2" id="aw"/>
 <input type="button" onclick="document.getElementById('a').value = a.value + '3';" value="3" id="ae"/>
@@ -75,4 +75,6 @@ input[id="wuwuwu"]{margin-left:115px;margin-top:10px}
 input[id="haha"]{margin-left:45px}
 input[id="wa"]{margin-left:45px}
 input[id="xixixi"]{margin-left:45px;margin-top:10px}
+p[id="jszc"]{text-align:center;text-align:bottom}
 </style>
+<p id="jszc">GitHub提供技术支持</p>
