--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <br>
 <input type="button" onclick="document.getElementById('a').value ='';" value="C" id="ao" style="margin-left:115px"/>
 <input type="button" onclick="document.getElementById('a').value = a.value + '0';" value="0" id="ap"/>
-<input type="button" onclick="document.getElementById('a').value ='';" value="C" id="ao"/>
+<input type="button" onclick="document.getElementById('a').value =a.value + '.';" value="." id="ao"/>
 <style>
 input[id="aq"]{margin-left:115px;margin-top:10px}
 input[id="aw"]{margin-left:45px}
@@ -63,7 +63,7 @@ input[id="ap"]{margin-left:45px;margin-top:10px}
 <br>
 <input type="button" onclick="document.getElementById('b').value ='';" value="C" id="aaa" style="margin-left:115px"/>
 <input type="button" onclick="document.getElementById('b').value = b.value + '0';" value="0" id="xixixi"/>
-<input type="button" onclick="document.getElementById('b').value ='';" value="C" id="aaa" style="margin-left:45px"/>
+<input type="button" onclick="document.getElementById('b').value =b.value + '.';" value="." id="aaa" style="margin-left:45px"/>
 <style>
 input[id="awa"]{margin-left:115px;margin-top:10px}
 input[id="qaq"]{margin-left:45px}
